[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "pdm>=2.5.1",
    "pdm-pep517>=1.1.3",
]

[project]
name = "text_rpg"
version = "0.1.0"
description = "文字 RPG 基础工具，随用随写"
authors = [
    {name = "liggest"},
]
dependencies = []
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0"]
build-backend = "pdm.pep517.api"
